2_Parser/loucomp/y.output
Terminals unused in grammar

   ERROR
   THEN
   END
   REPEAT
   UNTIL
   READ
   WRITE


State 106 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 identifier: ID

    7 number_token: NUM

    8 var_declaration: type_specifier identifier SEMI
    9                | type_specifier identifier LBRACE NUM RBRACE SEMI

   10 type_specifier: INT
   11               | VOID

   12 @1: %empty

   13 fun_declaration: type_specifier identifier @1 LPAREN params RPAREN compound_stmt

   14 params: param_list
   15       | param_empty

   16 param_list: param_list COMMA param
   17           | param

   18 param_empty: type_specifier
   19            | %empty

   20 param: type_specifier identifier
   21      | type_specifier identifier LBRACE RBRACE

   22 statement_list: statement_list statement
   23               | %empty

   24 statement: expression_stmt
   25          | compound_stmt
   26          | selection_stmt
   27          | iteration_stmt
   28          | return_stmt
   29          | error

   30 expression_stmt: expression SEMI
   31                | SEMI

   32 compound_stmt: LCURLY local_declarations statement_list RCURLY

   33 local_declarations: local_declarations var_declaration
   34                   | %empty

   35 selection_stmt: IF LPAREN expression RPAREN statement
   36               | IF LPAREN expression RPAREN statement ELSE statement

   37 iteration_stmt: WHILE LPAREN expression RPAREN statement

   38 return_stmt: RETURN SEMI
   39            | RETURN expression SEMI

   40 @2: %empty

   41 expression: var @2 ASSIGN expression
   42           | simple_expression

   43 var: identifier

   44 @3: %empty

   45 var: identifier @3 LBRACE expression RBRACE

   46 simple_expression: additive_expression LE additive_expression
   47                  | additive_expression LT additive_expression
   48                  | additive_expression GT additive_expression
   49                  | additive_expression GE additive_expression
   50                  | additive_expression EQ additive_expression
   51                  | additive_expression NE additive_expression
   52                  | additive_expression

   53 additive_expression: additive_expression PLUS term
   54                    | additive_expression MINUS term
   55                    | term

   56 term: term TIMES factor
   57     | term OVER factor
   58     | factor

   59 factor: LPAREN expression RPAREN
   60       | var
   61       | call
   62       | number_token

   63 @4: %empty

   64 call: identifier @4 LPAREN args RPAREN

   65 args: arg_list
   66     | %empty

   67 arg_list: arg_list COMMA expression
   68         | expression


Terminals, with rules where they appear

$end (0) 0
error (256) 29
ERROR (258)
IF (259) 35 36
ELSE (260) 36
WHILE (261) 37
RETURN (262) 38 39
INT (263) 10
VOID (264) 11
THEN (265)
END (266)
REPEAT (267)
UNTIL (268)
READ (269)
WRITE (270)
ID (271) 6
NUM (272) 7 9
ASSIGN (273) 41
EQ (274) 50
NE (275) 51
LT (276) 47
LE (277) 46
GT (278) 48
GE (279) 49
PLUS (280) 53
MINUS (281) 54
TIMES (282) 56
OVER (283) 57
LPAREN (284) 13 35 36 37 59 64
RPAREN (285) 13 35 36 37 59 64
LBRACE (286) 9 21 45
RBRACE (287) 9 21 45
LCURLY (288) 32
RCURLY (289) 32
SEMI (290) 8 9 30 31 38 39
COMMA (291) 16 67


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
program (38)
    on left: 1, on right: 0
declaration_list (39)
    on left: 2 3, on right: 1 2
declaration (40)
    on left: 4 5, on right: 2 3
identifier (41)
    on left: 6, on right: 8 9 13 20 21 43 45 64
number_token (42)
    on left: 7, on right: 62
var_declaration (43)
    on left: 8 9, on right: 4 33
type_specifier (44)
    on left: 10 11, on right: 8 9 13 18 20 21
fun_declaration (45)
    on left: 13, on right: 5
@1 (46)
    on left: 12, on right: 13
params (47)
    on left: 14 15, on right: 13
param_list (48)
    on left: 16 17, on right: 14 16
param_empty (49)
    on left: 18 19, on right: 15
param (50)
    on left: 20 21, on right: 16 17
statement_list (51)
    on left: 22 23, on right: 22 32
statement (52)
    on left: 24 25 26 27 28 29, on right: 22 35 36 37
expression_stmt (53)
    on left: 30 31, on right: 24
compound_stmt (54)
    on left: 32, on right: 13 25
local_declarations (55)
    on left: 33 34, on right: 32 33
selection_stmt (56)
    on left: 35 36, on right: 26
iteration_stmt (57)
    on left: 37, on right: 27
return_stmt (58)
    on left: 38 39, on right: 28
expression (59)
    on left: 41 42, on right: 30 35 36 37 39 41 45 59 67 68
@2 (60)
    on left: 40, on right: 41
var (61)
    on left: 43 45, on right: 41 60
@3 (62)
    on left: 44, on right: 45
simple_expression (63)
    on left: 46 47 48 49 50 51 52, on right: 42
additive_expression (64)
    on left: 53 54 55, on right: 46 47 48 49 50 51 52 53 54
term (65)
    on left: 56 57 58, on right: 53 54 55 56 57
factor (66)
    on left: 59 60 61 62, on right: 56 57 58
call (67)
    on left: 64, on right: 61
@4 (68)
    on left: 63, on right: 64
args (69)
    on left: 65 66, on right: 64
arg_list (70)
    on left: 67 68, on right: 65 67


State 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    var_declaration   go to state 6
    type_specifier    go to state 7
    fun_declaration   go to state 8


State 1

   10 type_specifier: INT .

    $default  reduce using rule 10 (type_specifier)


State 2

   11 type_specifier: VOID .

    $default  reduce using rule 11 (type_specifier)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 9


State 4

    1 program: declaration_list .
    2 declaration_list: declaration_list . declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    declaration      go to state 10
    var_declaration  go to state 6
    type_specifier   go to state 7
    fun_declaration  go to state 8


State 5

    3 declaration_list: declaration .

    $default  reduce using rule 3 (declaration_list)


State 6

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


State 7

    8 var_declaration: type_specifier . identifier SEMI
    9                | type_specifier . identifier LBRACE NUM RBRACE SEMI
   13 fun_declaration: type_specifier . identifier @1 LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 11

    identifier  go to state 12


State 8

    5 declaration: fun_declaration .

    $default  reduce using rule 5 (declaration)


State 9

    0 $accept: program $end .

    $default  accept


State 10

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


State 11

    6 identifier: ID .

    $default  reduce using rule 6 (identifier)


State 12

    8 var_declaration: type_specifier identifier . SEMI
    9                | type_specifier identifier . LBRACE NUM RBRACE SEMI
   13 fun_declaration: type_specifier identifier . @1 LPAREN params RPAREN compound_stmt

    LBRACE  shift, and go to state 13
    SEMI    shift, and go to state 14

    $default  reduce using rule 12 (@1)

    @1  go to state 15


State 13

    9 var_declaration: type_specifier identifier LBRACE . NUM RBRACE SEMI

    NUM  shift, and go to state 16


State 14

    8 var_declaration: type_specifier identifier SEMI .

    $default  reduce using rule 8 (var_declaration)


State 15

   13 fun_declaration: type_specifier identifier @1 . LPAREN params RPAREN compound_stmt

    LPAREN  shift, and go to state 17


State 16

    9 var_declaration: type_specifier identifier LBRACE NUM . RBRACE SEMI

    RBRACE  shift, and go to state 18


State 17

   13 fun_declaration: type_specifier identifier @1 LPAREN . params RPAREN compound_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 19 (param_empty)

    type_specifier  go to state 19
    params          go to state 20
    param_list      go to state 21
    param_empty     go to state 22
    param           go to state 23


State 18

    9 var_declaration: type_specifier identifier LBRACE NUM RBRACE . SEMI

    SEMI  shift, and go to state 24


State 19

   18 param_empty: type_specifier .
   20 param: type_specifier . identifier
   21      | type_specifier . identifier LBRACE RBRACE

    ID  shift, and go to state 11

    $default  reduce using rule 18 (param_empty)

    identifier  go to state 25


State 20

   13 fun_declaration: type_specifier identifier @1 LPAREN params . RPAREN compound_stmt

    RPAREN  shift, and go to state 26


State 21

   14 params: param_list .
   16 param_list: param_list . COMMA param

    COMMA  shift, and go to state 27

    $default  reduce using rule 14 (params)


State 22

   15 params: param_empty .

    $default  reduce using rule 15 (params)


State 23

   17 param_list: param .

    $default  reduce using rule 17 (param_list)


State 24

    9 var_declaration: type_specifier identifier LBRACE NUM RBRACE SEMI .

    $default  reduce using rule 9 (var_declaration)


State 25

   20 param: type_specifier identifier .
   21      | type_specifier identifier . LBRACE RBRACE

    LBRACE  shift, and go to state 28

    $default  reduce using rule 20 (param)


State 26

   13 fun_declaration: type_specifier identifier @1 LPAREN params RPAREN . compound_stmt

    LCURLY  shift, and go to state 29

    compound_stmt  go to state 30


State 27

   16 param_list: param_list COMMA . param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_specifier  go to state 31
    param           go to state 32


State 28

   21 param: type_specifier identifier LBRACE . RBRACE

    RBRACE  shift, and go to state 33


State 29

   32 compound_stmt: LCURLY . local_declarations statement_list RCURLY

    $default  reduce using rule 34 (local_declarations)

    local_declarations  go to state 34


State 30

   13 fun_declaration: type_specifier identifier @1 LPAREN params RPAREN compound_stmt .

    $default  reduce using rule 13 (fun_declaration)


State 31

   20 param: type_specifier . identifier
   21      | type_specifier . identifier LBRACE RBRACE

    ID  shift, and go to state 11

    identifier  go to state 25


State 32

   16 param_list: param_list COMMA param .

    $default  reduce using rule 16 (param_list)


State 33

   21 param: type_specifier identifier LBRACE RBRACE .

    $default  reduce using rule 21 (param)


State 34

   32 compound_stmt: LCURLY local_declarations . statement_list RCURLY
   33 local_declarations: local_declarations . var_declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 23 (statement_list)

    var_declaration  go to state 35
    type_specifier   go to state 36
    statement_list   go to state 37


State 35

   33 local_declarations: local_declarations var_declaration .

    $default  reduce using rule 33 (local_declarations)


State 36

    8 var_declaration: type_specifier . identifier SEMI
    9                | type_specifier . identifier LBRACE NUM RBRACE SEMI

    ID  shift, and go to state 11

    identifier  go to state 38


State 37

   22 statement_list: statement_list . statement
   32 compound_stmt: LCURLY local_declarations statement_list . RCURLY

    error   shift, and go to state 39
    IF      shift, and go to state 40
    WHILE   shift, and go to state 41
    RETURN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 44
    LCURLY  shift, and go to state 29
    RCURLY  shift, and go to state 45
    SEMI    shift, and go to state 46

    identifier           go to state 47
    number_token         go to state 48
    statement            go to state 49
    expression_stmt      go to state 50
    compound_stmt        go to state 51
    selection_stmt       go to state 52
    iteration_stmt       go to state 53
    return_stmt          go to state 54
    expression           go to state 55
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 38

    8 var_declaration: type_specifier identifier . SEMI
    9                | type_specifier identifier . LBRACE NUM RBRACE SEMI

    LBRACE  shift, and go to state 13
    SEMI    shift, and go to state 14


State 39

   29 statement: error .

    $default  reduce using rule 29 (statement)


State 40

   35 selection_stmt: IF . LPAREN expression RPAREN statement
   36               | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 62


State 41

   37 iteration_stmt: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 63


State 42

   38 return_stmt: RETURN . SEMI
   39            | RETURN . expression SEMI

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 44
    SEMI    shift, and go to state 64

    identifier           go to state 47
    number_token         go to state 48
    expression           go to state 65
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 43

    7 number_token: NUM .

    $default  reduce using rule 7 (number_token)


State 44

   59 factor: LPAREN . expression RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 44

    identifier           go to state 47
    number_token         go to state 48
    expression           go to state 66
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 45

   32 compound_stmt: LCURLY local_declarations statement_list RCURLY .

    $default  reduce using rule 32 (compound_stmt)


State 46

   31 expression_stmt: SEMI .

    $default  reduce using rule 31 (expression_stmt)


State 47

   43 var: identifier .
   45    | identifier . @3 LBRACE expression RBRACE
   64 call: identifier . @4 LPAREN args RPAREN

    LPAREN    reduce using rule 63 (@4)
    LBRACE    reduce using rule 44 (@3)
    $default  reduce using rule 43 (var)

    @3  go to state 67
    @4  go to state 68


State 48

   62 factor: number_token .

    $default  reduce using rule 62 (factor)


State 49

   22 statement_list: statement_list statement .

    $default  reduce using rule 22 (statement_list)


State 50

   24 statement: expression_stmt .

    $default  reduce using rule 24 (statement)


State 51

   25 statement: compound_stmt .

    $default  reduce using rule 25 (statement)


State 52

   26 statement: selection_stmt .

    $default  reduce using rule 26 (statement)


State 53

   27 statement: iteration_stmt .

    $default  reduce using rule 27 (statement)


State 54

   28 statement: return_stmt .

    $default  reduce using rule 28 (statement)


State 55

   30 expression_stmt: expression . SEMI

    SEMI  shift, and go to state 69


State 56

   41 expression: var . @2 ASSIGN expression
   60 factor: var .

    ASSIGN    reduce using rule 40 (@2)
    $default  reduce using rule 60 (factor)

    @2  go to state 70


State 57

   42 expression: simple_expression .

    $default  reduce using rule 42 (expression)


State 58

   46 simple_expression: additive_expression . LE additive_expression
   47                  | additive_expression . LT additive_expression
   48                  | additive_expression . GT additive_expression
   49                  | additive_expression . GE additive_expression
   50                  | additive_expression . EQ additive_expression
   51                  | additive_expression . NE additive_expression
   52                  | additive_expression .
   53 additive_expression: additive_expression . PLUS term
   54                    | additive_expression . MINUS term

    EQ     shift, and go to state 71
    NE     shift, and go to state 72
    LT     shift, and go to state 73
    LE     shift, and go to state 74
    GT     shift, and go to state 75
    GE     shift, and go to state 76
    PLUS   shift, and go to state 77
    MINUS  shift, and go to state 78

    $default  reduce using rule 52 (simple_expression)


State 59

   55 additive_expression: term .
   56 term: term . TIMES factor
   57     | term . OVER factor

    TIMES  shift, and go to state 79
    OVER   shift, and go to state 80

    $default  reduce using rule 55 (additive_expression)


State 60

   58 term: factor .

    $default  reduce using rule 58 (term)


State 61

   61 factor: call .

    $default  reduce using rule 61 (factor)


State 62

   35 selection_stmt: IF LPAREN . expression RPAREN statement
   36               | IF LPAREN . expression RPAREN statement ELSE statement

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 44

    identifier           go to state 47
    number_token         go to state 48
    expression           go to state 81
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 63

   37 iteration_stmt: WHILE LPAREN . expression RPAREN statement

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 44

    identifier           go to state 47
    number_token         go to state 48
    expression           go to state 82
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 64

   38 return_stmt: RETURN SEMI .

    $default  reduce using rule 38 (return_stmt)


State 65

   39 return_stmt: RETURN expression . SEMI

    SEMI  shift, and go to state 83


State 66

   59 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 84


State 67

   45 var: identifier @3 . LBRACE expression RBRACE

    LBRACE  shift, and go to state 85


State 68

   64 call: identifier @4 . LPAREN args RPAREN

    LPAREN  shift, and go to state 86


State 69

   30 expression_stmt: expression SEMI .

    $default  reduce using rule 30 (expression_stmt)


State 70

   41 expression: var @2 . ASSIGN expression

    ASSIGN  shift, and go to state 87


State 71

   50 simple_expression: additive_expression EQ . additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 44

    identifier           go to state 47
    number_token         go to state 48
    var                  go to state 88
    additive_expression  go to state 89
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 72

   51 simple_expression: additive_expression NE . additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 44

    identifier           go to state 47
    number_token         go to state 48
    var                  go to state 88
    additive_expression  go to state 90
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 73

   47 simple_expression: additive_expression LT . additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 44

    identifier           go to state 47
    number_token         go to state 48
    var                  go to state 88
    additive_expression  go to state 91
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 74

   46 simple_expression: additive_expression LE . additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 44

    identifier           go to state 47
    number_token         go to state 48
    var                  go to state 88
    additive_expression  go to state 92
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 75

   48 simple_expression: additive_expression GT . additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 44

    identifier           go to state 47
    number_token         go to state 48
    var                  go to state 88
    additive_expression  go to state 93
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 76

   49 simple_expression: additive_expression GE . additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 44

    identifier           go to state 47
    number_token         go to state 48
    var                  go to state 88
    additive_expression  go to state 94
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 77

   53 additive_expression: additive_expression PLUS . term

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 44

    identifier    go to state 47
    number_token  go to state 48
    var           go to state 88
    term          go to state 95
    factor        go to state 60
    call          go to state 61


State 78

   54 additive_expression: additive_expression MINUS . term

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 44

    identifier    go to state 47
    number_token  go to state 48
    var           go to state 88
    term          go to state 96
    factor        go to state 60
    call          go to state 61


State 79

   56 term: term TIMES . factor

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 44

    identifier    go to state 47
    number_token  go to state 48
    var           go to state 88
    factor        go to state 97
    call          go to state 61


State 80

   57 term: term OVER . factor

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 44

    identifier    go to state 47
    number_token  go to state 48
    var           go to state 88
    factor        go to state 98
    call          go to state 61


State 81

   35 selection_stmt: IF LPAREN expression . RPAREN statement
   36               | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 99


State 82

   37 iteration_stmt: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 100


State 83

   39 return_stmt: RETURN expression SEMI .

    $default  reduce using rule 39 (return_stmt)


State 84

   59 factor: LPAREN expression RPAREN .

    $default  reduce using rule 59 (factor)


State 85

   45 var: identifier @3 LBRACE . expression RBRACE

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 44

    identifier           go to state 47
    number_token         go to state 48
    expression           go to state 101
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 86

   64 call: identifier @4 LPAREN . args RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 44

    $default  reduce using rule 66 (args)

    identifier           go to state 47
    number_token         go to state 48
    expression           go to state 102
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61
    args                 go to state 103
    arg_list             go to state 104


State 87

   41 expression: var @2 ASSIGN . expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 43
    LPAREN  shift, and go to state 44

    identifier           go to state 47
    number_token         go to state 48
    expression           go to state 105
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 88

   60 factor: var .

    $default  reduce using rule 60 (factor)


State 89

   50 simple_expression: additive_expression EQ additive_expression .
   53 additive_expression: additive_expression . PLUS term
   54                    | additive_expression . MINUS term

    PLUS   shift, and go to state 77
    MINUS  shift, and go to state 78

    $default  reduce using rule 50 (simple_expression)


State 90

   51 simple_expression: additive_expression NE additive_expression .
   53 additive_expression: additive_expression . PLUS term
   54                    | additive_expression . MINUS term

    PLUS   shift, and go to state 77
    MINUS  shift, and go to state 78

    $default  reduce using rule 51 (simple_expression)


State 91

   47 simple_expression: additive_expression LT additive_expression .
   53 additive_expression: additive_expression . PLUS term
   54                    | additive_expression . MINUS term

    PLUS   shift, and go to state 77
    MINUS  shift, and go to state 78

    $default  reduce using rule 47 (simple_expression)


State 92

   46 simple_expression: additive_expression LE additive_expression .
   53 additive_expression: additive_expression . PLUS term
   54                    | additive_expression . MINUS term

    PLUS   shift, and go to state 77
    MINUS  shift, and go to state 78

    $default  reduce using rule 46 (simple_expression)


State 93

   48 simple_expression: additive_expression GT additive_expression .
   53 additive_expression: additive_expression . PLUS term
   54                    | additive_expression . MINUS term

    PLUS   shift, and go to state 77
    MINUS  shift, and go to state 78

    $default  reduce using rule 48 (simple_expression)


State 94

   49 simple_expression: additive_expression GE additive_expression .
   53 additive_expression: additive_expression . PLUS term
   54                    | additive_expression . MINUS term

    PLUS   shift, and go to state 77
    MINUS  shift, and go to state 78

    $default  reduce using rule 49 (simple_expression)


State 95

   53 additive_expression: additive_expression PLUS term .
   56 term: term . TIMES factor
   57     | term . OVER factor

    TIMES  shift, and go to state 79
    OVER   shift, and go to state 80

    $default  reduce using rule 53 (additive_expression)


State 96

   54 additive_expression: additive_expression MINUS term .
   56 term: term . TIMES factor
   57     | term . OVER factor
